Preview render in Cycles becomes yellow tinted when cursor is on the file browser #74119

Closed
opened 2020-02-22 22:45:48 +01:00 by Ghost · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-21 23:50, hash: 0b626703f9
Worked: (optional)

Short description of error
I attached a video with the bug. Basically when I preview the render using cycles, and hover my mouse over Blender's file browser, the preview magically becomes tinted in yellow. It happens only when I hover while it's still rendering, not when it's finished.

2b9t9d2jqh.mp4

Exact steps for others to reproduce the error

  1. Go to shading workspace
  2. Set viewport shading to rendered (with Cycles)
  3. Hover mouse over file browser on the left while cycles is still sampling. Set samples to high, to get sufficient time.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-21 23:50, hash: `0b626703f9` Worked: (optional) **Short description of error** I attached a video with the bug. Basically when I preview the render using cycles, and hover my mouse over Blender's file browser, the preview magically becomes tinted in yellow. It happens only when I hover while it's still rendering, not when it's finished. [2b9t9d2jqh.mp4](https://archive.blender.org/developer/F8363425/2b9t9d2jqh.mp4) **Exact steps for others to reproduce the error** 1. Go to shading workspace 2. Set viewport shading to rendered (with Cycles) 3. Hover mouse over file browser on the left while cycles is still sampling. Set samples to high, to get sufficient time.
Author

Added subscriber: @dabuxian

Added subscriber: @dabuxian
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member
  • does this happen with the default setup ? (add a blend file if any)
  • Also try after File menu > Default > load factory settings.
  • Sanity check: Graphics driver updates, if any.
- does this happen with the default setup ? (add a blend file if any) - Also try after File menu > Default > load factory settings. - Sanity check: Graphics driver updates, if any.
Author
  • does this happen with the default setup ? (add a blend file if any)

yes

  • Also try after File menu > Default > load factory settings.

same problem

  • Sanity check: Graphics driver updates, if any.

I'm on the latest one + tried on a different pc with a Geforce 970, and same thing.

> - does this happen with the default setup ? (add a blend file if any) yes > - Also try after File menu > Default > load factory settings. same problem > - Sanity check: Graphics driver updates, if any. I'm on the latest one + tried on a different pc with a Geforce 970, and same thing.
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Confirmed on this system.

Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits (Mojave, in case it isn't clear)
Graphics card: Intel(R) HD Graphics 6000 Intel Inc. 4.1 INTEL-12.10.12

One observation, take mouse pointer to the shader editor below, and it becomes normal .

Confirmed on this system. Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits (Mojave, in case it isn't clear) Graphics card: Intel(R) HD Graphics 6000 Intel Inc. 4.1 INTEL-12.10.12 One observation, take mouse pointer to the shader editor below, and it becomes normal .

Added subscribers: @fclem, @mont29

Added subscribers: @fclem, @mont29
Clément Foucault was assigned by Bastien Montagne 2020-02-24 11:22:43 +01:00

@fclem this is very likely a consequence of recent color management refactor I'd bet?

@fclem this is very likely a consequence of recent color management refactor I'd bet?
Clément Foucault was unassigned by Jeroen Bakker 2020-02-24 12:24:10 +01:00
Jeroen Bakker self-assigned this 2020-02-24 12:24:10 +01:00
Member

Issue is that the gpu_shader_image_color_frag is being used. And the file browser sets the color parameter of that shader to render the icons.
The draw manager should reset the color parameter to fix this issue.

Issue is that the `gpu_shader_image_color_frag` is being used. And the file browser sets the color parameter of that shader to render the icons. The draw manager should reset the color parameter to fix this issue.

This issue was referenced by cb2f5d498e

This issue was referenced by cb2f5d498e450da0b2f26702ed4d2691d9ee3750
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74119
No description provided.